--- a/projects/ngx-tribute/tsconfig.lib.prod.json
+++ b/projects/ngx-tribute/tsconfig.lib.prod.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "declarationMap": false
   },
   "angularCompilerOptions": {
