--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production ngx-tribute",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-lib": "ng build --configuration production ngx-tribute && cp README.md dist/ngx-tribute || copy README.md dist/ngx-tribute",
+    "publish-package": "npm run build-lib && cd dist/ngx-tribute && npm publish"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.2",
-    "@angular/common": "^15.0.2",
-    "@angular/compiler": "^15.0.2",
-    "@angular/core": "^15.0.2",
-    "@angular/forms": "^15.0.2",
-    "@angular/platform-browser": "^15.0.2",
-    "@angular/platform-browser-dynamic": "^15.0.2",
-    "@angular/router": "^15.0.2",
+    "@angular/animations": "^13.4.0",
+    "@angular/common": "^13.4.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.4.0",
+    "@angular/forms": "^13.4.0",
+    "@angular/platform-browser": "^13.4.0",
+    "@angular/platform-browser-dynamic": "^13.4.0",
+    "@angular/router": "^13.4.0",
     "core-js": "^3.26.1",
     "rxjs": "~7.6.0",
     "tributejs": "^5.1.3",
@@ -25,9 +27,9 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.2",
-    "@angular/cli": "~15.0.2",
-    "@angular/compiler-cli": "^15.0.2",
+    "@angular-devkit/build-angular": "^13",
+    "@angular/cli": "^13",
+    "@angular/compiler-cli": "^13",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
@@ -35,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^15.0.1",
-    "typescript": "~4.8.4"
+    "ng-packagr": "^13",
+    "typescript": "~4.4.2"
   }
 }
